--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,17 @@
 <div class="container">
-    <nav class="navbar">Header component</nav>
+    <div appDropdown 
+         class="btn-group">
+        <button 
+            class="btn btn-primary dropdown-toggle" 
+            type="button" 
+            data-toggle="dropdown">
+            Dropdown Example<span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+            <li><a href="#">HTML</a></li>
+            <li><a href="#">CSS</a></li>
+            <li><a href="#">JavaScript</a></li>
+        </ul>
+    </div>
     <app-list></app-list>
 </div>
