Input from parent to child

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,4 +18,7 @@
   <p appHoverExample>Style this with hover directive</p>
   <p appEasyExample [defaultColor]="'yellow'" [dangerColor]="'violet'">Style this easy directive</p>
   <app-header></app-header>
+  <app-parent></app-parent> 
+  <!--<output-parent></output-parent> -->
+  
 </div>
