--- a/src/app/input/child.component.html
+++ b/src/app/input/child.component.html
@@ -1,5 +1,5 @@
-<div>
+<div style="background-color:#f1f1f1;margin:30px;">
     <p>Child component</p>
     <div>
-        {{reviews}}</div>
+        Say <strong> {{message}}</strong> from parent</div>
 </div>
