--- a/src/app/input/parent.component.html
+++ b/src/app/input/parent.component.html
@@ -1,2 +1,4 @@
-<p>Parent component</p>
-<app-child [reviews]="books.bookReviews"></app-child>
+<div style="background-color:#ccc;padding:20px;">
+    <p>Parent component</p>
+    <app-child [message]="message"></app-child>
+</div>
